# zofi

./: LICENSE  README.md  zofi_logo.fig
src/: CMakeLists.txt  addrSpace.cpp  addrSpace.h  config.h.in  debugstream.cpp  debugstream.h  exitState.cpp  exitState.h  options.cpp  options.h  optionsList.cpp  optionsList.h  progressbar.cpp  progressbar.h  regManip.cpp  regManip.h  regs.def  runner.cpp  runner.h  statistics.cpp  statistics.h  threads.cpp  threads.h  utils.cpp  utils.h  zofi.cpp
test/: zit
test/builtins/: equals  get_outcome  greater_than  less_than
test/zit_tests/: check_avx_import.c  check_jobs.c  corrupted_exit_code.c  corrupted_stderr.c  corrupted_stdout.c  detected.c  diff_cmd.c  diff_disable_redirect.c  force_inject_to_bit.c  force_inject_to_reg.c  inf_loop.c  injection_time.c  set_orig_exit_state.c  test_args.c  test_env.c  test_help.c  test_inject_to.c  test_result.c  test_segfault.cpp  threads.c
